# Notiva_Publix_Export

./: .gitignore  CMakeLists.txt  README.md  SightReadingApp-Assets.qrc  SightReadingApp-UI.qrc  privacy-policy.html
UI/: BassSettings.qml  Main.qml  RangeSelector.qml  SetGoal.qml  Settings.qml  SightReadingActive.qml  StartPage.qml  TrebleSettings.qml
UI/Common/Controls/: MainButton.qml  SwitchButton.qml
android/: AndroidManifest.xml
src/: AppSettings.cpp  AppSettings.h  MicrophoneInput.h  NoteSelector.cpp  NoteSelector.h  PitchDetector.cpp  PitchDetector.h  WinStreakModel.cpp  WinStreakModel.h  main.cpp
